# Encryption-Tool

./: .gitignore  README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  release.jks  tauri.conf.json
src-tauri/src/: commands.rs  file_crypto.rs  keystore.rs  lib.rs  main.rs  state.rs  text_crypto.rs
src-tauri/src/crypto_algorithms/: aes256.rs  chacha20.rs  mlkem768.rs  mod.rs  rsa2048.rs  rsa4096.rs  rsa_common.rs  utils.rs  x25519.rs
src/lib/i18n/: index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/files/: +page.svelte
src/routes/text/: +page.svelte
static/locales/: en-US.json  zh-CN.json
